<resources>
    <string name="app_name">Splash Demo</string>
    <string name="skip_ad">跳过 3 秒</string>
    <string name="title_home">首页</string>
    <string name="title_dynamic">动态</string>
    <string name="title_personal">我的</string>
    <string name="login_title">登录</string>
    <string name="login_hint1">邮箱/手机号/账号</string>
    <string name="login_hint2">登录密码</string>
    <string name="user_signup">用户注册</string>
    <string name="signup_title">注册</string>
    <string name="signup_nickname">账号</string>
    <string name="signup_password">密码(6–16位字符组成,区分大小写)</string>
    <string name="normal_login">账号密码登录</string>
    <string name="title_rank">排行榜</string>
    <string name="username">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="game_img">游戏图片</string>
    <string name="game_score">评分</string>
    <string name="game_like">关注</string>
    <string name="game_is_like">已关注</string>
    <string name="game_comment">评论</string>
    <string name="game_forum">论坛</string>
    <string name="brief_info">简介</string>
    <string name="rate_title">评分&amp;评论</string>
    <string name="tap_comment">轻触评分</string>
    <string name="add_comment">添加评价</string>
    <string name="release">发表</string>
    <string name="nickname">昵称</string>
    <string name="mrfz">明日方舟</string>
    <string name="game_details">游戏详情</string>
    <string name="last_name">10小时前</string>
    <string name="comment_hint">写下您的宝贵意见</string>
    <string name="sample_count">250</string>
    <string name="show_comment">查看评分&amp;评价</string>
    <string name="comment_edit">编辑</string>
    <string name="comment_count">100人评分</string>
    <string name="intro_content">这是一段有亿点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点点长的简介</string>
    <string name="login_only_can_input">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>