<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.splashdemo.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_dynamic"
        android:name="com.example.splashdemo.ui.DynamicFragment"
        android:label="@string/title_dynamic"
        tools:layout="@layout/fragment_dynamic" />
    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.splashdemo.ui.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal"/>




</navigation>