<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/login_title"
            android:textColor="@color/login_title"
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/accountLoginText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/login_hint1"
            android:textColorHint="@color/hint_color"
            android:theme="@style/EditTextUnderline"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/passwordLoginText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:hint="@string/login_hint2"
            android:textColorHint="@color/hint_color"
            android:theme="@style/EditTextUnderline"
            android:inputType="textPassword"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_shape"
            android:text="@string/login_title"
            android:onClick="onClick"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/button_white"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码"
            android:layout_marginStart="40dp"
            android:textColor="#00aaff"
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_signup"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="40dp"
            android:layout_alignParentRight="true"
            android:textColor="#00aaff"
            android:textSize="16dp"/>
    </RelativeLayout>
</RelativeLayout>