<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/comment_back"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/comment_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/comment_writer_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <com.shehuan.niv.NiceImageView
            android:id="@+id/comment_user_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:is_circle="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/comment_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/comment_user_avatar"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"/>
        <TextView
            android:id="@+id/comment_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_toRightOf="@+id/comment_user_avatar"
            android:layout_marginTop="43dp"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/star_one"
                android:layout_width="10dp"
                android:src="@drawable/baseline_star_rate_24"
                android:layout_height="10dp"/>
            <ImageView
                android:id="@+id/star_two"
                android:layout_width="10dp"
                android:src="@drawable/baseline_star_rate_24"
                android:layout_height="10dp"/>
            <ImageView
                android:id="@+id/star_three"
                android:layout_width="10dp"
                android:src="@drawable/baseline_star_rate_24"
                android:layout_height="10dp"/>
            <ImageView
                android:id="@+id/star_four"
                android:layout_width="10dp"
                android:src="@drawable/baseline_star_rate_24"
                android:layout_height="10dp"/>
            <ImageView
                android:id="@+id/star_five"
                android:layout_width="10dp"
                android:src="@drawable/baseline_star_rate_24"
                android:layout_height="10dp"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/comment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp">
        <ImageView
            android:id="@+id/comment_like"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/baseline_favorite_border_24"/>
        <TextView
            android:id="@+id/comment_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/comment_like"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:text="@string/sample_count"/>
    </RelativeLayout>
</LinearLayout>